Address feedback: <code> around title and placeholder

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3800,7 +3800,7 @@ However, most authors do not need detailed understanding of the algorithms since
           <h5>Rule 4: Avoid Browser Fallback</h5>
           <p>
             When authors do not specify an accessible name using an element or attribute that is intended for naming, browsers attempt to help assistive technology users by resorting to fallback methods for generating a name.
-            For example, the HTML title and placeholder attributes are used as last resort sources of content for accessible names.
+            For example, the HTML <code>title</code> and <code>placeholder</code> attributes are used as last resort sources of content for accessible names.
             Because the purpose of these attributes is not naming, their content typically yields low quality accessible names that are not effective.
           </p>
         </section>
