--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3863,7 +3863,7 @@ However, most authors do not need detailed understanding of the algorithms since
         <section id="naming_with_aria-label">
           <h5>Naming with a String Attribute Via <code>aria-label</code></h5>
           <p>
-            The <a href="#aria-label" class="property-reference">aria-label</a> property enables authors to specify a string that will name an element.
+            The <a href="#aria-label" class="property-reference">aria-label</a> property enables authors to specify a string that will name an element without being rendered visually.
             For example, the name of the following button is &quot;Close&quot;.
           </p>
           <pre><code>&lt;button type="button" aria-label="Close">X&lt;/button></code></pre>
@@ -3919,7 +3919,7 @@ However, most authors do not need detailed understanding of the algorithms since
     <li><p>It has the highest precedence when browsers calculate accessible names, i.e., it overrides names from child content and all other naming attributes, including <code>aria-label</code>.</p></li>
     <li><p>It can concatenate content from multiple elements into a single name string.</p></li>
     <li>
-      <p>It incorporates content from elements regardless of their visibility, i.e., it even includes content from elements with <code>display:none</code> or <code>visibility:hidden</code> in the calculated name string.</p>
+      <p>It incorporates content from elements regardless of their visibility, i.e., it even includes content from elements with the HTML <code>hidden</code> attribute, or CSS <code>display: none</code> or <code>visibility: hidden</code> in the calculated name string.</p>
       <pre><code>&lt;span id="night-mode-label" hidden>Night mode&lt;/span>
   &lt;input type="checkbox" role="switch" aria-labelledby="night-mode-label"></code></pre>
     </li>
