Address feedback: Browsers → browsers

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3959,7 +3959,7 @@ However, most authors do not need detailed understanding of the algorithms since
           <h5>Naming Form Controls with the Label Element</h5>
           <p>
             The HTML <code>label</code> element enables authors to identify content that serves as a label and associate it with a form control.
-            When a <code>label</code> element is associated with a form control, Browsers calculate an accessible name for the form control from the <code>label</code> content.
+            When a <code>label</code> element is associated with a form control, browsers calculate an accessible name for the form control from the <code>label</code> content.
           </p>
           <p>
             For example, text displayed adjacent to a checkbox may be visually associated with the checkbox, so it is understood as the checkbox label by users who can perceive that visual association.
