Address feedback: fix typo falback

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4803,7 +4803,7 @@ However, most authors do not need detailed understanding of the algorithms since
           <h5>Examples of non-recursive accessible name calculation</h5>
           <p>Consider an <code>input</code> element that has no associated <code>label</code> element and only a <code>name</code> attribute and so does not have an accessible name (do not do this):</p>
           <pre><code>&lt;input name="code"></code></pre>
-          <p>If there is a <code>placeholder</code> attribute, then it serves as a naming falback mechanism (avoid doing this):</p>
+          <p>If there is a <code>placeholder</code> attribute, then it serves as a naming fallback mechanism (avoid doing this):</p>
 
           <pre><code>&lt;input name="code"
        placeholder="One-time code"></code></pre>
