Address feedback: clarify aria-labelledby recursion is not chaining

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4794,7 +4794,7 @@ However, most authors do not need detailed understanding of the algorithms since
         </p>
         <p>
           When calculating a name from content, the user agent walks through all descendant nodes.
-          And, when following <code>aria-labelledby</code> references, it similarly walks the tree of each referenced element.
+          And, when following references in an <code>aria-labelledby</code> attribute, it similarly walks the tree of each referenced element.
           Thus, the naming algorithm is recursive.
           The following two sections provide non-recursive and recursive examples of how the algorithm works.
         </p>
