typo: Conversly -> Conversely

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2359,7 +2359,7 @@
         For example, in a product search, a two-thumb slider could be used to enable users to set the minimum and maximum price limits for the search.
         In many two-thumb sliders, the thumbs are not allowed to pass one another, such as when the slider sets the minimum and maximum values for a range.
         For example, in a price range selector, the maximum value of the thumb that sets the lower end of the range is limited by the current value of the thumb that sets the upper end of the range.
-        Conversly the minimum value of the upper end thumb is limited by the current value of the lower end thumb.
+        Conversely, the minimum value of the upper end thumb is limited by the current value of the lower end thumb.
         However, in some multi-thumb sliders, each thumb sets a value that does not depend on the other thumb values.
       </p>
 
